--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
        <h4 class="Oscar">Liane David (Responsable UI/FX)</h4>
        <div class="OscarPres">
                  
-            <img class="imageOscar" src="Image/Liane.Rond.png" alt="LianeLaBG" width="200" height="200">
+            <img class="imageOscar" src="Image/LianeCropped.png" alt="LianeLaBG" width="200" height="200">
             <div class="TextOscar" style="text-indent: 20px;">
                 "  Je possède quelques bases sur Unity acquises en autodidacte pour un petit projet personnel de création d'un flappy bird. 
                 Je suis très intriguée par les détails des jeux vidéos et leur importance, participer à la création des effets en combat, 
