--- a/Mon site/telechargement.html
+++ b/Mon site/telechargement.html
@@ -18,12 +18,11 @@
             </h1>
             <br>
             <br>
-            <ul>
-                <li><a href="/Image/Logo_v4.jpg" download="MeleeMonster"> Download game  <i class="fas fa-download"></i></a></li>
-                <li><a href="#" download="MeleeMonster"> Soutenance 1 &nbsp; <i class="far fa-file-alt"></i></a></li>
-                <li><a href="#" download="MeleeMonster"> Soutenance 2 &nbsp; <i class="far fa-file-alt"></i></a></li>
-                <li><a href="#" download="MeleeMonster"> Soutenance 3 &nbsp; <i class="far fa-file-alt"></i></a></li>
-
+            <ul class="aligné">
+                <li class="dl"><a href="/Image/Logo_v4.jpg" download="MeleeMonster"> Download game  <i class="fas fa-download"></i></a></li>
+                <li class="dl"><a href="#" download="MeleeMonster"> Soutenance 1 &nbsp; <i class="far fa-file-alt"></i></a></li>
+                <li class="dl"><a href="#" download="MeleeMonster"> Soutenance 2 &nbsp; <i class="far fa-file-alt"></i></a></li>
+                <li class= "dl"><a href="#" download="MeleeMonster"> Soutenance 3 &nbsp; <i class="far fa-file-alt"></i></a></li>
 
             </ul>
         </div>
