--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                  <li class="scroll"><a href="#compositiondugroupe">About us</a></li>
                  <li class="scroll"><a href="#bibliographie">Bibliographie</a></li>
                  <li class="scroll"><a href="telechargement.html">Telechargement</a></li>
+                 <li class="scroll"><a href="timeline.html">Timeline</a></li>
     
             </nav>           
         </header>
