--- a/Mon site/index.html
+++ b/Mon site/index.html
@@ -32,11 +32,11 @@
             <br>
             <br>
             <ul class="page1">              
-                <li class="rs"><a class="accueil" href="https://www.instagram.com/meleemonsters/?hl=fr"><i class="fab fa-instagram"></i></a></li> 
+                <li class="rs"><a class="accueil" href="https://www.instagram.com/meleemonsters/?hl=fr"><i class="fab fa-instagram"></i><i class="fab fa-instagram"></i></a></li> 
                 <li class="rs"><a class="accueil" href="https://twitter.com/melee_monster"><i class="fab fa-twitter"></i></a></li>
                 <li class="rs"><a class="accueil" href="https://www.youtube.com/channel/UCyuBPnB5Zx9DVLq8ChCjLSw"> <i class="fab fa-youtube"></i></a></li>
                 <li class="rs"><a class="accueil" href="https://github.com/oscarmorand/MeleeMonsters"> <i class="fab fa-github"></i></a></li>
-                
+               
             </ul>
 
         </div>
