--- a/Mon site/telechargement.html
+++ b/Mon site/telechargement.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,10 +12,17 @@
 <body>
     <section class="top-page">
 
+        <header class="header">
+            <img src="Image/Logo_v4-nobg.png" alt="Logo du site">
+            <nav class="nav">
+
+                 <li class="scroll"><a href="index.html">Page d'accueil</a></li>
+                 <li class="scroll"><a href="timeline.html">Timeline Du projet</a></li>
+            </nav>           
+        </header>
+
         <div class="contenu">       
-            <h1 class="Merci">
-                  Merci d'avoir téléchargé notre jeu ! :)  
-            </h1>
+            
             <br>
             <br>
             <ul class="aligné">
