--- a/Mon site/timeline.html
+++ b/Mon site/timeline.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/js/all.min.js"></script>
+    <link rel="icon" href="Image/Logo_v4.jpg">
     <link rel="stylesheet" href="css/styles.css">
     <title>Timeline</title>
 </head>
 <body>
     <div class="titreTL">
+        <h3 class="retourAcc"> <a href="index.html"><i class="fas fa-home"></i></i> Aller à l'accueil</i></a></h3>
+        <h3 class="retourAcc"> <a href="index.html"><i class="fas fa-stream"></i> Timeline du Projet</i></a></h3>
         <h1>Frise chronologique du Projet</h1>
     </div>
     
