--- a/telechargement.html
+++ b/telechargement.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,16 +12,23 @@
 <body>
     <section class="top-page">
 
+        <header class="header">
+            <img src="Image/Logo_v4-nobg.png" alt="Logo du site">
+            <nav class="nav">
+
+                 <li class="scroll"><a href="index.html">Page d'accueil</a></li>
+                 <li class="scroll"><a href="timeline.html">Timeline Du projet</a></li>
+            </nav>           
+        </header>
+
         <div class="contenu">       
-            <h1 class="Merci">
-                  Merci d'avoir téléchargé notre jeu ! :)  
-            </h1>
+            
             <br>
             <br>
             <ul class="aligné">
                 <li class="dl"><a href="/Image/Logo_v4.jpg" download="MeleeMonster"> Download game  <i class="fas fa-download"></i></a></li>
-                <li class="dl"><a href="#" download="MeleeMonster"> Soutenance 1 &nbsp; <i class="far fa-file-alt"></i></a></li>
-                <li class="dl"><a href="#" download="MeleeMonster"> Soutenance 2 &nbsp; <i class="far fa-file-alt"></i></a></li>
+                <li class="dl"><a href="/Fichiers/Rapport_soutenance_num_ro_1.pdf" download="MeleeMonsterSoutenance1"> Soutenance 1 &nbsp; <i class="far fa-file-alt"></i></a></li>
+                <li class="dl"><a href="/Fichiers/Rapport_soutenance_num_ro_2.pdf" download="MeleeMonsterSoutenance2"> Soutenance 2 &nbsp; <i class="far fa-file-alt"></i></a></li>
                 <li class= "dl"><a href="#" download="MeleeMonster"> Soutenance 3 &nbsp; <i class="far fa-file-alt"></i></a></li>
 
             </ul>
