--- a/timeline.html
+++ b/timeline.html
@@ -12,7 +12,7 @@
 <body>
     <div class="titreTL">
         <h3 class="retourAcc"> <a href="index.html"><i class="fas fa-home"></i></i> Aller à l'accueil</i></a></h3>
-        <h3 class="retourAcc"> <a href="index.html"><i class="fas fa-stream"></i> Timeline du Projet</i></a></h3>
+        <h3 class="retourAcc"> <a href="timeline.html"><i class="fas fa-stream"></i> Timeline du Projet</i></a></h3>
         <h1>Frise chronologique du Projet</h1>
     </div>
     
