--- a/telechargement.html
+++ b/telechargement.html
@@ -26,7 +26,7 @@
             <br>
             <br>
             <ul class="aligné">
-                <li class="dl"><a href="/Image/Logo_v4.jpg" download="MeleeMonster"> Download game  <i class="fas fa-download"></i></a></li>
+                <li class="dl"><a href="/Fichiers/MeleeMonsters 1.0 Setup (x64).exe" download="MeleeMonster"> Download game  <i class="fas fa-download"></i></a></li>
                 <li class="dl"><a href="/Fichiers/Rapport_soutenance_num_ro_1.pdf" download="MeleeMonsterSoutenance1"> Soutenance 1 &nbsp; <i class="far fa-file-alt"></i></a></li>
                 <li class="dl"><a href="/Fichiers/Rapport_soutenance_num_ro_2.pdf" download="MeleeMonsterSoutenance2"> Soutenance 2 &nbsp; <i class="far fa-file-alt"></i></a></li>
                 <li class= "dl"><a href="#" download="MeleeMonster"> Soutenance 3 &nbsp; <i class="far fa-file-alt"></i></a></li>
