--- a/telechargement.html
+++ b/telechargement.html
@@ -27,8 +27,8 @@
             <br>
             <ul class="aligné">
                 <li class="dl"><a href="https://www.mediafire.com/file/gevh3igj29v1czi/MeleeMonsters_1.0_Setup_%2528x64%2529.exe/file" download="MeleeMonster"> Download game  <i class="fas fa-download"></i></a></li>
-                <li class="dl"><a href="/Fichiers/Rapport_soutenance_num_ro_1.pdf" download="MeleeMonsterSoutenance1"> Soutenance 1 &nbsp; <i class="far fa-file-alt"></i></a></li>
-                <li class="dl"><a href="/Fichiers/Rapport_soutenance_num_ro_2.pdf" download="MeleeMonsterSoutenance2"> Soutenance 2 &nbsp; <i class="far fa-file-alt"></i></a></li>
+                <li class="dl"><a href="https://www.mediafire.com/file/0mqc7uak50v2ldg/Rapport_soutenance_num_ro_1.pdf/file" download="MeleeMonsterSoutenance1"> Soutenance 1 &nbsp; <i class="far fa-file-alt"></i></a></li>
+                <li class="dl"><a href="https://www.mediafire.com/file/szru3ie17w2vorz/Rapport_soutenance_num_ro_2.pdf/file" download="MeleeMonsterSoutenance2"> Soutenance 2 &nbsp; <i class="far fa-file-alt"></i></a></li>
                 <li class= "dl"><a href="#" download="MeleeMonster"> Soutenance 3 &nbsp; <i class="far fa-file-alt"></i></a></li>
 
             </ul>
